--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 
 <body>
-
+    <h1>Choose your membership</h1>
+    <strong><a href="https://code.us17.list-manage.com/subscribe?u=dc1d059cf17a2f6f9f07b948a&id=0747908382">The form with all the fields</a></strong>
+    <br><br>
+    <p><a href="https://mailchi.mp/35cae283187e/5-a-month-paypal-subscription">£5 a month PayPal subscription</a> | <a href="./monthly.html">£5 a month PayPal button</a> | <a href="https://www.sandbox.paypal.com/webapps/billing/plans/subscribe?plan_id=P-10579173W0163400ML4ZJBWY">£5 a month PayPal sub</a></p>
+    <p><a href="https://www.sandbox.paypal.com/webapps/billing/plans/subscribe?plan_id=P-8Y9387243N329163FL45K62I">trial £5 a month PayPal sub</a></p>
+    <p><a href="https://mailchi.mp/fefa4ac2cf0b/50-a-year-paypal-subscription">£50 A Year PayPal Subscription</a> | <a href="./yearly.html">£50 a year PayPal button</a> | <a href="https://www.sandbox.paypal.com/webapps/billing/plans/subscribe?plan_id=P-4LM55166GH4526055L4ZJMCQ">£50 a year PayPal sub</a></p>
+    <p><a href="https://mailchi.mp/cdde95e4e5b9/ppl-contribution">PPL Contribution</a></p>
+    <p><a href="https://mailchi.mp/2471b94a6e17/community">Community</a></p>
 </body>
 
 </html>
